// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpIdUnique return errors on different path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "severity": 1,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path2",
      "get",
      "operationId",
    ],
    "severity": 1,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
]
`;

exports[`oasOpIdUnique return errors on same path operations same id 1`] = `
Array [
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "operationId",
    ],
    "severity": 1,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
  Object {
    "code": "operation-operationId-unique",
    "message": "operationId must be unique",
    "path": Array [
      "paths",
      "/path1",
      "post",
      "operationId",
    ],
    "severity": 1,
    "summary": "Every operation must have a unique \`operationId\`.",
  },
]
`;
